--- a/.github/workflows/.github-ci.yml
+++ b/.github/workflows/.github-ci.yml
@@ -6,7 +6,7 @@ on:
   workflow_dispatch:
 
 jobs:
-  build:
+  build-on:
     runs-on: ubuntu-latest
     steps:
       - name: Execute Build Commands
@@ -20,18 +20,17 @@ jobs:
           echo "--- Build Status ---"
           echo "Compile complete."
   test-job:
-    needs: build-job # Ensures the build check runs first
+    needs: build-job
     runs-on: ubuntu-latest
 
     steps:
       - name: Checkout repository code
         uses: actions/checkout@v4
         
-      # Setup Python environment
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
-          python-version: '3.x' # Use a stable Python version
+          python-version: '3.8'
 
 
       - name: Deploy Virtual Environment and Run Script
