--- a/.github/workflows/.github-ci.yml
+++ b/.github/workflows/.github-ci.yml
@@ -27,7 +27,7 @@ jobs:
           
           source venvRG/bin/activate 
           
-          ./venvRG/bin/python /TestingRunners/app/randomgrid.py
+          python3 /home/runner/work/TestingRunners/app/randomgrid.py
           
           deactivate
 
