--- a/.github/workflows/.github-ci.yml
+++ b/.github/workflows/.github-ci.yml
@@ -1,4 +1,4 @@
-name: File Existence Check Pipeline
+name: Python Build and Test Pipeline
 
 on:
   push:
@@ -6,41 +6,54 @@ on:
   workflow_dispatch:
 
 jobs:
+  build-job:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Manual Git Checkout
+        run: |
+          # The runner is already in the $GITHUB_WORKSPACE directory.
+          # We use git clone . to pull the remote code into the current directory.
+          # The URL is provided by GitHub context variables.
+          # We check out the specific commit hash or branch being run.
+          git clone --depth 1 "https://github.com/${{ github.repository }}" . 
+          git checkout ${{ github.sha }}
+
+      - name: Execute Build Commands
+        run: |
+          hostname
+          python3 --version
+          echo "Compile complete."
 
   test-job:
+    needs: build-job
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repository code (Deep Clone)
-        uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-
-      - name: Find Script in Workspace (CRITICAL TEST)
-        id: find_file
+      - name: Manual Git Checkout
         run: |
-          WORKSPACE_ROOT=$(pwd)
-          
-          echo "--- Starting Search for randomgrid.py in: $GITHUB_WORKSPACE ---"
-          
-          # Use 'find' to locate the file anywhere under the workspace root
-          FOUND_PATH=$(find "$GITHUB_WORKSPACE" -name "randomgrid.py" 2>/dev/null)
-          
-          if [ -z "$FOUND_PATH" ]; then
-            echo "::error::File 'randomgrid.py' NOT FOUND anywhere in the checked-out repository."
-            echo "Current PWD: $WORKSPACE_ROOT"
-            echo "Contents of app/ directory:"
-            ls -al app/
-            echo "Contents of Repository Root:"
-            ls -al $GITHUB_WORKSPACE
-            exit 1
-          else
-            echo "::notice::SUCCESS! File found at: $FOUND_PATH"
-            echo "FOUND_PATH=$FOUND_PATH" >> $GITHUB_OUTPUT
-          fi
-          
-      - name: SUCCESS - File Found
-        if: success() && steps.find_file.outputs.FOUND_PATH != ''
-        run: echo "The file was successfully located. The path error is fixed."
-        
-      # You can add the real Python execution steps back here once this test passes.
+          # Repeat the manual checkout to get the code onto this new test runner
+          git clone --depth 1 "https://github.com/${{ github.repository }}" . 
+          git checkout ${{ github.sha }}
+
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.x'
+
+      - name: Deploy Virtual Environment and Run Script
+        run: |
+          # 1. Create and activate venv
+          python -m venv venvRG
+          source venvRG/bin/activate
+
+          echo "--- VENV Activated. Running script ---"
+
+          # 2. *** EXECUTE SCRIPT ***
+          # Uses the simplified relative path 'app/randomgrid.py'
+          ./venvRG/bin/python app/randomgrid.py
+
+          # 3. Cleanup
+          deactivate
+          rm -rf venvRG
+
+          echo "Virtual environment cleanup complete."
