--- a/.github/workflows/.github-ci.yml
+++ b/.github/workflows/.github-ci.yml
@@ -6,6 +6,11 @@ on:
   workflow_dispatch:
 
 jobs:
+  my_build_job:
+    runs-on: self-hosted  
+    steps:
+      - uses: actions/checkout@v4
+
   build-job:
     runs-on: ubuntu-latest
     steps:
