--- a/.github/workflows/.github-ci.yml
+++ b/.github/workflows/.github-ci.yml
@@ -9,7 +9,7 @@ jobs:
   my_build_job:
     runs-on: self-hosted  
     steps:
-      - uses: ./.github/actions/checkout@v4 
+      - uses: ./.github/actions/checkout
 
   build-job:
     runs-on: ubuntu-latest
